# linksql

./: .gitignore  .gitkeep  .jscpd.json  .lycheeignore  .prettierignore  CHANGELOG.md  README.md  eslint.config.js  package-lock.json  package.json
.changeset/: linksql-polyglot-reference-implementations.md
.github/actions/publish-dockerhub/: action.yml
.github/workflows/: csharp.yml  example-app.yml  js.yml  links.yml  python.yml  release.yml  rust.yml
csharp/: LinksQL.sln  README.md
csharp/src/LinksQL/: Errors.cs  LinksQL.csproj  Lino.cs  Names.cs  Protocol.cs  Query.cs  Schema.cs  Store.cs  Substitution.cs
csharp/tests/LinksQL.Tests/: EngineTests.cs  LinksQL.Tests.csproj  LinoTests.cs  ProtocolTests.cs  SchemaTests.cs
docs/: BEST-PRACTICES.md  CONTRIBUTING.md  SPECIFICATION.md
docs/case-studies/issue-25/: DETAILED-COMPARISON.md  README.md
docs/case-studies/issue-29/: README.md
docs/case-studies/issue-31/: README.md  web-capture-pr49-commits.json
docs/case-studies/issue-33/: README.md
docs/case-studies/issue-36/: README.md
docs/case-studies/issue-38/: CASE-STUDY.md
docs/case-studies/issue-40/: CICD-COMPARISON.md  README.md
docs/case-studies/issue-41/: README.md
docs/case-studies/issue-42/: README.md
examples/: basic-usage.js
examples/universal-app/: README.md  capacitor.config.json  forge.config.cjs  index.html  package-lock.json  package.json
experiments/: test-check-release-needed.mjs  test-detect-changes.mjs
js/: .jscpd.json  package-lock.json  package.json
js/examples/: basic-usage.js  schema-server.js
js/scripts/: check-file-line-limits.sh  check-mjs-syntax.sh  update-preview-images.mjs
js/src/: client.js  index.d.ts  index.js  lino.js  protocol.js  schema.js  server.js  store.js  triggers.js
js/tests/: check-file-line-limits.test.js  cli.test.js  engine.test.js  index.test.js  lino.test.js  package-metadata.test.js  protocol.test.js  schema.test.js  server.test.js  triggers.test.js  universal-app.test.js
python/: README.md  pyproject.toml
python/src/linksql/: __init__.py  lino.py  names.py  protocol.py  query.py  schema.py  store.py  substitution.py
python/tests/: test_engine.py  test_lino.py  test_protocol.py  test_schema.py
rust/: Cargo.toml  README.md
rust/src/: lib.rs  lino.rs  names.rs  protocol.rs  query.rs  schema.rs  store.rs  substitution.rs
rust/tests/: engine.rs  lino.rs  protocol.rs  schema.rs
scripts/: check-docker-publish.mjs  check-file-line-limits.sh  check-web-archive.mjs  create-github-release.mjs  create-manual-changeset.mjs  detect-code-changes.mjs  format-github-release.mjs  format-release-notes-helpers.mjs  format-release-notes.mjs  js-paths.mjs  merge-changesets.mjs  package-info.mjs  publish-to-npm.mjs  setup-npm.mjs  simulate-fresh-merge.sh  update-preview-images.mjs  validate-changeset.mjs  wait-for-npm.mjs
src/: client.js  index.d.ts  index.js  names.js  query.js  server.js  substitution.js
tests/: check-file-line-limits.test.js  ci-timeouts.test.js  create-github-release.test.js  docker-publish.test.js  package-info.test.js  package-metadata.test.js  release-badge.test.js  server.test.js  setup-npm.test.js  tag-prefix.test.js  universal-app.test.js  workflow-reliability.test.js
(+103 files in other folders)
