[package]
name = "linksql"
version = "0.1.0"
edition = "2021"
description = "Rust reference implementation of LinksQL — an associative query language built around a single substitution operation."
readme = "README.md"
license = "Unlicense"
keywords = ["linksql", "links", "doublets", "associative", "query"]
categories = ["data-structures", "parser-implementations"]
repository = "https://github.com/link-foundation/linksql"
rust-version = "1.70"

[lib]
name = "linksql"
path = "src/lib.rs"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
too_many_lines = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
# Product/acronym names (LiNo, LinksQL, AST, CRUD, JSON) read as prose, not code
# identifiers, so backticking every occurrence would be noise; allow the lint.
doc_markdown = "allow"
